add translation for adverts
